k8s-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: isitfullmoon
  labels:
    app: isitfullmoon
  namespace: isitfullmoon

spec:
  selector:
    matchLabels:
      app: isitfullmoon
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      namespace: isitfullmoon
      labels:
        app: isitfullmoon
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/controlplane
                    operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - isitfulloon
                topologyKey: "kubernetes.io/hostname"
              weight: 100
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: app-data
              mountPath: "/var/app"
            - name: "php-socket"
              mountPath: /sock
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
        - name: php-fpm
          image: php:7.2-fpm
          ports:
            - containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
          volumeMounts:
            - name: php-socket
              mountPath: /sock
            - name: app-data
              mountPath: "/var/app"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: app-data
          emptyDir: {}
        - name: php-socket
          emptyDir: {}
        - name: nginx-config-volume
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: isitfullmoon-service
  namespace: isitfullmoon
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: isitfullmoon
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: isitfullmoon
  namespace: isitfullmoon
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  rules:
    - host: isitfullmoon.com
      http:
        paths:
          - backend:
              serviceName: isitfullmoon-service
              servicePort: 80
    - host: www.isitfullmoon.com
      http:
        paths:
          - backend:
              serviceName: isitfullmoon-service
              servicePort: 80
